feat: add web UI and enhance RAG capabilities
This comprehensive update adds a fully-functional web interface and
improves the core RAG functionality:

Web Interface:
- Add Flask-based web application (flask_web_app.py) with complete HTML template
- Implement interactive question-answering through browser UI
- Update Dockerfile and docker-compose.yml to support web interface

Query Enhancement:
- Implement intelligent summary detection for queries
- Improve response formatting with key components and points extraction
- Increase result count for summary-type queries (k=7)
- Remove redundant scoring from regular results

Documentation:
- Update README with architecture diagram reference
- Enhance roadmap with LLM integration section and UI improvements
- Update CI/CD pipeline section to reflect GitHub Actions implementation
- Add better documentation for Docker usage

Repository Structure:
- Add GitHub Actions workflow for automated testing
- Clean up test files and temporary code
- Ensure Docker container has all necessary directories

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,17 @@ beautifulsoup4
 trafilatura
 langchain
 langchain-community
-langchain-openai
-tqdm
-faiss-cpu
-openai
-python-dotenv
+langchain>=0.0.200
+faiss-cpu>=1.7.4
+scikit-learn>=1.0.2
+numpy>=1.22.4
+pandas>=1.4.3
+python-dotenv>=0.20.0
+tqdm>=4.64.0
+fastapi>=0.95.0
+uvicorn>=0.21.0
+pydantic>=1.10.7
+jinja2>=3.1.2
+pytest>=7.3.1
+# openai>=0.27.0
 tiktoken
